# Kitsune-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  MEMORY.md  README.md  main.py  pyproject.toml  requirements.txt
kitsune/: __init__.py  backup.py  bot.py  brain.py  config.py  health.py  learner.py  memory.py  model_utils.py  reminder.py  router.py  search.py  self_improve.py  tools.py
