[project]
name = "kitsune-agent"
version = "0.1.0"
description = "Telegram AI agent with adaptive routing, long-term memory, and local tool support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.27.0,<4.0",
    "httpx>=0.27.0",
    "litellm>=1.40.0",
    "chromadb>=0.5.0",
    "ollama>=0.6.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
